--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,15 @@
-<%= @user.email %>
+<html>
+<head>
+</head>
+<body>
+
+
+<%= form_for @user, url: {action: "update"} do |f| %>
+ <p>
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
+ </p>
+  <p class="button"><%= f.submit "Update" %></p> 
+<% end %>
+</body>
+</html>
