--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,19 +13,35 @@
       </ul>
     </div>
   <% end %>
+
+  <p>
+    <%= f.label :first_name%><br />
+    <%= f.text_field :first_name %>
+  </p>
+
+  <p>
+    <%= f.label :last_name%><br />
+    <%= f.text_field :last_name %>
+  
+  </p>
+
   <p>
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </p>
+
   <p>
     <%= f.label :password %><br />
     <%= f.password_field :password %>
   </p>
+
   <p>
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %>
   </p>
+
   <p class="button"><%= f.submit %></p>
+
 <% end %>
 
 
