--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,29 @@
 <html>
-<head></head>
+<head>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+</head>
 <body>
+<div align="center">
+		<%= form_for @user, url: {action: "update"} do |f| %>
 
-<%= form_for @user, url: {action: "update"} do |f| %>
+		 <p>
+		    <%= f.label :first_name %><br />
+		    <%= f.text_field :first_name %>
+		 </p>
 
- <p>
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
- </p>
+		 <p>
+		    <%= f.label :last_name %><br />
+		    <%= f.text_field :last_name %>
+		 </p>
 
- <p>
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
- </p>
+		 <p>
+		    <%= f.label :email %><br />
+		    <%= f.text_field :email %>
+		 </p>
 
- <p>
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
- </p>
+		  <p class="button"><%= f.submit "Update" %></p> 
 
-  <p class="button"><%= f.submit "Update" %></p> 
-
-<% end %>
-
+		<% end %>
+</div>
 </body>
 </html>
